updated maven.html to point to 1.0.0-beta4 version

--- a/maven.html
+++ b/maven.html
@@ -9,11 +9,11 @@ title: Maven
     &lt;dependency&gt;
         &lt;groupId&gt;com.metsci.glimpse&lt;/groupId&gt;
         &lt;artifactId&gt;glimpse-core&lt;/artifactId&gt;
-        &lt;version&gt;1.0.0-beta3&lt;/version&gt;
+        &lt;version&gt;1.0.0-beta4&lt;/version&gt;
     &lt;/dependency&gt;
 &lt;/dependencies&gt;</pre>
 
-<p>If you'd like to get the daily build of the development branch (master), use version:</p>
+<p>If you'd like to get the latest snapshot of the development branch (master), use version:</p>
 <pre>        &lt;version&gt;CURRENT-SNAPSHOT&lt;/version&gt;</pre>
 
 <p>The <i>full</i> Glimpse release contains a number of modules which add additional features (and usually additional third-party dependencies) to Glimpse. Each has its own Maven artifact:<p>
