--- a/maven.html
+++ b/maven.html
@@ -13,8 +13,8 @@ title: Maven
     &lt;/dependency&gt;
 &lt;/dependencies&gt;</pre>
 
-<p>If you'd like to get the latest snapshot of the development branch (master), use version:</p>
-<pre>        &lt;version&gt;CURRENT-SNAPSHOT&lt;/version&gt;</pre>
+<p>If you'd like to get the latest snapshot of the verion 1.1 development branch (master), use version:</p>
+<pre>        &lt;version&gt;1.1-SNAPSHOT&lt;/version&gt;</pre>
 
 <p>The <i>full</i> Glimpse release contains a number of modules which add additional features (and usually additional third-party dependencies) to Glimpse. Each has its own Maven artifact:<p>
 <pre>        &lt;artifactId&gt;glimpse-extras-charts&lt;/artifactId&gt;</pre>
