updated glimpse site download and maven page for 1.2.0

--- a/download.html
+++ b/download.html
@@ -14,7 +14,7 @@ The <i>full</i> release contains Glimpse extensions for integrating Glimpse with
     <h2>Binary</h2>
 
     <p>
-      Download the latest release: <a href="https://github.com/downloads/metsci/glimpse/glimpse_core_v1.0.0-beta4.zip">glimpse_core_1.0.0-beta4.zip</a> or <a href="https://github.com/downloads/metsci/glimpse/glimpse_full_v1.0.0-beta4.zip">glimpse_full_1.0.0-beta4.zip</a>.
+      Download the latest release: <a href="https://github.com/downloads/metsci/glimpse/glimpse_core_v1.2.0.zip">glimpse_core_1.2.0.zip</a> or <a href="https://github.com/downloads/metsci/glimpse/glimpse_full_v1.2.0.zip">glimpse_full_1.2.0.zip</a>.
     </p>
 
     <p>
