additional internal link fixes

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 layout: default
 title: Home
 ---
-<img src="images/GlimpseLogo.png" style="margin-left: auto; margin-right:auto; display: block; margin-top: 20px; margin-bottom: 10px"/>
+<img src="/glimpse/images/GlimpseLogo.png" style="margin-left: auto; margin-right:auto; display: block; margin-top: 20px; margin-bottom: 10px"/>
 
 <div class="description">Interactive Data Visualization in Java and OpenGL</div>
 
 <iframe src="http://player.vimeo.com/video/37437090" width="800" height="450" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-<div class="videodetail"><a href="https://vimeo.com/37437090">Vimeo HD</a> - <a href="http://youtu.be/jBTZx21Lhmg">You Tube</a> - <a href="http://glimpse.metsci.com/video/Glimpse_v4.mp4">MP4 Download</a> - <a href="videos.html">More Video</a></div>
+<div class="videodetail"><a href="https://vimeo.com/37437090">Vimeo HD</a> - <a href="http://youtu.be/jBTZx21Lhmg">You Tube</a> - <a href="http://glimpse.metsci.com/video/Glimpse_v4.mp4">MP4 Download</a> - <a href="/glimpse/videos.html">More Video</a></div>
 
-<link href="css/blog.css" rel="stylesheet" type="text/css">
+<link href="/glimpse/css/blog.css" rel="stylesheet" type="text/css">
 
 <br/>
 
@@ -24,7 +24,7 @@ title: Home
     </div>
   {% endfor %}
 </ul>
-<div class="moreinfo"><a href="news.html">More News</a></div>
+<div class="moreinfo"><a href="/glimpse/news.html">More News</a></div>
 <hr class="front">
 
 <br/>
