--- a/videos.html
+++ b/videos.html
@@ -5,4 +5,4 @@ title: Videos
 <h3>Videos</h3>
 
 <iframe src="http://player.vimeo.com/video/37437090" width="800" height="450" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-<div class="videodetail">(<a href="https://vimeo.com/37437090">Vimeo HD</a> <a href="http://youtu.be/jBTZx21Lhmg">You Tube</a> <a href="http://glimpse.metsci.com/video/Glimpse_v4.mp4">MP4 Download</a> <a href="videos.html">More Video</a>)</div>
+<div class="videodetail">(<a href="https://vimeo.com/37437090">Vimeo HD</a> <a href="http://youtu.be/jBTZx21Lhmg">You Tube</a> <a href="http://glimpse.metsci.com/video/Glimpse_v4.mp4">MP4 Download</a> <a href="/glimpse/videos.html">More Video</a>)</div>
