--- a/webstart.html
+++ b/webstart.html
@@ -3,7 +3,7 @@ layout: default
 title: Web Start
 ---
 
-<h3><a href="index.html">Interactive Web Start Examples</a></h3>
+<h3><a href="/glimpse/index.html">Interactive Web Start Examples</a></h3>
 
 <br>
 <center>
@@ -16,5 +16,5 @@ title: Web Start
 <br>
 
 <p>
-Use the launch button to run Glimpse examples using Java Web Start! When the application appears, select an example from the tree on the left. You can view its source and use the "Run Example" button to launch the example in a new window. See <a href="requirements.html">Requirements</a> for Glimpse hardware and software requirements.
+Use the launch button to run Glimpse examples using Java Web Start! When the application appears, select an example from the tree on the left. You can view its source and use the "Run Example" button to launch the example in a new window. See <a href="/glimpse/requirements.html">Requirements</a> for Glimpse hardware and software requirements.
 </p>
