--- a/contribute.html
+++ b/contribute.html
@@ -2,4 +2,4 @@
 layout: default
 title: Contribute
 ---
-<h3><a href="index.html">Under Construction</a></h3>
+<h3><a href="/glimpse/index.html">Under Construction</a></h3>
