--- a/download.html
+++ b/download.html
@@ -8,7 +8,7 @@ title: Downloads
     </p>
 
     <p>
-The <i>full</i> release contains Glimpse extensions for integrating Glimpse with <a href="http://www.eclipse.org/swt/">SWT</a>, <a href="www.3dconnexion.com/SpaceNavigator">3D Mice</a>, <a href="https://developers.google.com/public-data/">Google DSPL</a>, and <a href="http://www.nauticalcharts.noaa.gov/mcd/enc/">NOAA ENC</a> charts. If you are using <a href="maven.html">Maven</a> you can depend on the various Glimpse extensions individually.
+The <i>full</i> release contains Glimpse extensions for integrating Glimpse with <a href="http://www.eclipse.org/swt/">SWT</a>, <a href="www.3dconnexion.com/SpaceNavigator">3D Mice</a>, <a href="https://developers.google.com/public-data/">Google DSPL</a>, and <a href="http://www.nauticalcharts.noaa.gov/mcd/enc/">NOAA ENC</a> charts. If you are using <a href="/glimpse/maven.html">Maven</a> you can depend on the various Glimpse extensions individually.
     </p>
 
     <h2>Binary</h2>
@@ -22,7 +22,7 @@ The <i>full</i> release contains Glimpse extensions for integrating Glimpse with
     </p>
 
     <p>
-      Depend on Glimpse using <a href="maven.html">Maven</a>.
+      Depend on Glimpse using <a href="/glimpse/maven.html">Maven</a>.
     </p>
     
     <h2>Source</h2>
