--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@ layout: default
 title: News
 ---
 
-<link href="css/blog.css" rel="stylesheet" type="text/css">
+<link href="/glimpse/css/blog.css" rel="stylesheet" type="text/css">
 
 <ul class="posts">
   {% for post in site.categories.news limit: 15 %}
@@ -24,4 +24,4 @@ title: News
   {% endfor %}
 </ul>
 
-<div class="moreinfo"><a href="news_archive.html">Archive</a> - <a href="atom.xml">RSS Feed</a></div>
+<div class="moreinfo"><a href="/glimpse/news_archive.html">Archive</a> - <a href="/glimpse/atom.xml">RSS Feed</a></div>
