added new news post announcing version 1.2.1

--- a/contributors.html
+++ b/contributors.html
@@ -10,3 +10,4 @@ title: Contributors
 <br/>John Cunningham (<a href="mailto:cunningham@metsci.com">cunningham@metsci.com</a>)
 <br/>Ben Ellis (<a href="mailto:ellis@metsci.com">ellis@metsci.com</a>)
 <br/>Brad Moskowitz (<a href="mailto:moskowitz@metsci.com">moskowitz@metsci.com</a>)</p>
+<br/>Aaron Randolph (<a href="mailto:randolph@metsci.com">randolph@metsci.com</a>)</p>
