gh-pages: updated screenshots

--- a/screenshots.html
+++ b/screenshots.html
@@ -15,42 +15,115 @@ title: Screenshots
     <a href="/glimpse/images/SampleApplication1.html"><img src="/glimpse/images/SampleApplication1.png" border="1" width="600px"/></a>
     <br>
 
-    <h3>Heat Maps</h3>
-    <img src="/glimpse/images/Minimap.png" border="1" width="600px"/>
+    <h3>Tracks (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/animated/AnimatedGeoPlotExample.java">AnimatedGeoPlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/AnimatedGeoPlotExample.png" border="1" width="600px"/>
     <br>
 
-    <h3>Floating Axes</h3>
-    <img src="/glimpse/images/FloatingAxis.png" width="600px"/>
-    <br>
-    
-    <h3>Electronic Navigation Charts</h3>
-    <img src="/glimpse/images/ENCChart.png" width="600px"/>
+    <h3>Polygons (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/animated/AnimatedPolygonExample.java">AnimatedPolygonExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/AnimatedPolygonExample.png" border="1" width="600px"/>
     <br>
 
-    <h3>Raster Navigation Charts</h3>
-    <img src="/glimpse/images/RNCChart.png" width="600px"/>
-    <br>
-    
-    <h3>Projected Textures</h3>
-    <img src="/glimpse/images/DynamicReproject.png" border="1" width="600px"/>
+    <h3>Heat Map (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/basic/HeatMapExample.java">HeatMapExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/HeatMapExample.png" border="1" width="600px"/>
     <br>
 
-    <h3>Treemap</h3>
-    <img src="/glimpse/images/TreeMap.png" border="1" width="600px"/>
+    <h3>Tabbed Axes (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/basic/TaggedHeatMapExample.java">TaggedHeatMapExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/TaggedHeatMapExample.png" border="1" width="600px"/>
     <br>
 
-    <h3>Histogram</h3>
-    <img src="/glimpse/images/HistogramScreen1.png" border="1" width="600px"/>
+    <h3>Custom Plot Layouts (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/layout/CustomLayoutExample.java">CustomLayoutExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/CustomLayoutExample.png" border="1" width="600px"/>
     <br>
 
-    <h3>XY Line</h3>
-    <img src="/glimpse/images/LinePlotScreen1.png" border="1" width="600px"/>
+    <h3>Blank Plot (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/basic/EmptyPlotExample.java">EmptyPlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/EmptyPlotExample.png" border="1" width="600px"/>
     <br>
 
-    <h3>Land</h3>
-    <img src="/glimpse/images/LandScreen2.png" width="600px"/>
+    <h3>Nested Plots (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/layout/FloatingLayoutExample.java">FloatingLayoutExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/FloatingLayoutExample.png" border="1" width="600px"/>
     <br>
 
-    <h3>Bathymetry</h3>
-    <img src="/glimpse/images/Bathymetry.png" width="600px"/>
+    <h3>Navigation Miniplot (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/layout/MiniMapLayoutExample.java">MiniMapLayoutExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/MiniMapLayoutExample.png" border="1" width="600px"/>
     <br>
+
+    <h3>Floating Axes (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/basic/FunctionPlotExample.java">FunctionPlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/FunctionPlotExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Histogram (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/basic/HistogramPlotExample.java">HistogramPlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/HistogramPlotExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Line Plot (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/basic/LinePlotExample.java">LinePlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/LinePlotExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Scatterplot (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/basic/ScatterplotExample.java">ScatterplotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/ScatterplotExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Tree Maps (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/misc/TreeMapExample.java">TreeMapExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/TreeMapExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Icons (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/icon/IconPainterExample.java">IconPainterExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/IconPainterExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Images (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/basic/ImageExample.java">ImageExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/ImageExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Multiple Axes Per Plot (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/axis/MultiAxisPlotExample.java">MultiAxisPlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/MultiAxisPlotExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Horizontal Timeline (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/stacked/HorizontalTimelinePlotExample.java">HorizontalTimelinePlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/HorizontalTimelinePlotExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Vertical Timeline (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/stacked/VerticalTimelinePlotExample.java">VerticalTimelinePlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/VerticalTimelinePlotExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Dynamic Projections (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/animated/AnimatedProjectionExample.java">AnimatedProjectionExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/AnimatedProjectionExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Dynamic Heat Maps (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/animated/AnimatedTextureExample.java">AnimatedTextureExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/AnimatedTextureExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Projected Heat Maps (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/projection/GenericProjectionExample.java">GenericProjectionExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/GenericProjectionExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Electronic Navigation Charts (<a href="https://github.com/metsci/glimpse/blob/master/extras-examples/src/main/java/com/metsci/glimpse/examples/charts/enc/ENCMapViewerExample.java">ENCMapViewerExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/ENCMapViewerExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Coastlines (<a href="https://github.com/metsci/glimpse/blob/master/extras-examples/src/main/java/com/metsci/glimpse/examples/charts/shoreline/LandPlotExample.java">LandPlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/LandPlotExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Bathymetry (<a href="https://github.com/metsci/glimpse/blob/master/extras-examples/src/main/java/com/metsci/glimpse/examples/charts/bathy/BathymetryExample.java">BathymetryExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/BathymetryExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Raster Navigation Charts (<a href="https://github.com/metsci/glimpse/blob/master/extras-examples/src/main/java/com/metsci/glimpse/examples/charts/rnc/RasterNavigationChartExample.java">RasterNavigationChartExample.java</a>)</h3>
+    <img src="/glimpse/images/RNCChart.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Google DSPL Support (<a href="https://github.com/metsci/glimpse/blob/master/extras-examples/src/main/java/com/metsci/glimpse/examples/dspl/DsplTrackExample.java">DsplTrackExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/DsplTrackExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Efficient Line Painting (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/misc/DynamicLinePainterExample.java">DynamicLinePainterExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/DynamicLinePainterExample.png" border="1" width="600px"/>
+    <br>
+
+    <h3>Efficient Point Painting (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/misc/DynamicPointPainterExample.java">DynamicPointPainterExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/DynamicPointPainterExample.png" border="1" width="600px"/>
+    <br>
+
