added event timline picture

--- a/screenshots.html
+++ b/screenshots.html
@@ -79,6 +79,10 @@ title: Screenshots
     <img src="/glimpse/images/10_11_2012/MultiAxisPlotExample.png" border="1" width="600px"/>
     <br>
 
+    <h3>Collapsible Event Timeline (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/stacked/HorizontalTimelinePlotExample.java">HorizontalTimelinePlotExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/EventTimeline.png" border="1" width="600px"/>
+    <br>
+
     <h3>Horizontal Timeline (<a href="https://github.com/metsci/glimpse/blob/master/core-examples/src/main/java/com/metsci/glimpse/examples/stacked/HorizontalTimelinePlotExample.java">HorizontalTimelinePlotExample.java</a>)</h3>
     <img src="/glimpse/images/10_11_2012/HorizontalTimelinePlotExample.png" border="1" width="600px"/>
     <br>
