added WorldWind screenshot

--- a/screenshots.html
+++ b/screenshots.html
@@ -115,6 +115,10 @@ title: Screenshots
     <img src="/glimpse/images/10_11_2012/BathymetryExample.png" border="1" width="600px"/>
     <br>
 
+    <h3>Worldwind Integration (<a href="https://github.com/metsci/glimpse/blob/master/extras-examples/src/main/java/com/metsci/glimpse/examples/worldwind/BaythmetryTileExample.java">BaythmetryTileExample.java</a>)</h3>
+    <img src="/glimpse/images/10_11_2012/WorldwindBathymetry.png" border="1" width="600px"/>
+    <br>
+
     <h3>Raster Navigation Charts (<a href="https://github.com/metsci/glimpse/blob/master/extras-examples/src/main/java/com/metsci/glimpse/examples/charts/rnc/RasterNavigationChartExample.java">RasterNavigationChartExample.java</a>)</h3>
     <img src="/glimpse/images/RNCChart.png" border="1" width="600px"/>
     <br>
