added big quick navigation icons to the front page to quickly guide visitors to the main destinations on the site.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@ title: Home
 
 <div class="description">Interactive Data Visualization in Java and OpenGL</div>
 
-<iframe src="http://player.vimeo.com/video/37437090" width="800" height="450" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-<div class="videodetail"><a href="https://vimeo.com/37437090">Vimeo HD</a> - <a href="http://youtu.be/jBTZx21Lhmg">You Tube</a> - <a href="http://glimpse.metsci.com/video/Glimpse_v4.mp4">MP4 Download</a> - <a href="/glimpse/videos.html">More Video</a></div>
+<hr class="front">
 
-<link href="/glimpse/css/blog.css" rel="stylesheet" type="text/css">
+<div class="centred">
+
+<a href="/glimpse/screenshots.html"><img src="/glimpse/images/echo-icons/screenshots.png" onMouseOver="this.src='/glimpse/images/echo-icons/screenshots-selected.png'" onMouseOut="this.src='/glimpse/images/echo-icons/screenshots.png'" class="center"/></a>
+
+<a href="/glimpse/videos.html"><img src="/glimpse/images/echo-icons/videos.png" onMouseOver="this.src='/glimpse/images/echo-icons/videos-selected.png'" onMouseOut="this.src='/glimpse/images/echo-icons/videos.png'" class="center"/></a>
+
+<a href="http://glimpse.metsci.com/jnlp/launch.jnlp"><img src="/glimpse/images/echo-icons/demo.png" onMouseOver="this.src='/glimpse/images/echo-icons/demo-selected.png'" onMouseOut="this.src='/glimpse/images/echo-icons/demo.png'" class="center"/></a>
+
+<a href="/glimpse/guide.html"><img src="/glimpse/images/echo-icons/learnmore.png" onMouseOver="this.src='/glimpse/images/echo-icons/learnmore-selected.png'" onMouseOut="this.src='/glimpse/images/echo-icons/learnmore.png'" class="center"/></a>
+
+<a href="/glimpse/download.html"><img src="/glimpse/images/echo-icons/downloads.png" onMouseOver="this.src='/glimpse/images/echo-icons/downloads-selected.png'" onMouseOut="this.src='/glimpse/images/echo-icons/downloads.png'" class="center"/></a>
+
+</div>
 
 <hr class="front">
 
@@ -23,5 +34,11 @@ title: Home
   {% endfor %}
 </ul>
 <div class="moreinfo"><a href="/glimpse/news.html">More News</a></div>
+
 <hr class="front">
 
+
+<iframe src="http://player.vimeo.com/video/37437090" width="800" height="450" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<div class="videodetail"><a href="https://vimeo.com/37437090">Vimeo HD</a> - <a href="http://youtu.be/jBTZx21Lhmg">You Tube</a> - <a href="http://glimpse.metsci.com/video/Glimpse_v4.mp4">MP4 Download</a> - <a href="/glimpse/videos.html">More Video</a></div>
+
+<link href="/glimpse/css/blog.css" rel="stylesheet" type="text/css">
