--- a/download.html
+++ b/download.html
@@ -2,34 +2,35 @@
 layout: default
 title: Downloads
 ---
-    <h2>Download</h2>
-    <p>
-      Glimpse is released in two flavors: <i>core</i> and <i>full</i>. In most cases, <i>core</i> contains everything you need.
-    </p>
+    <h2>Latest Version</h2>
 
-    <p>
-The <i>full</i> release contains Glimpse extensions for integrating Glimpse with <a href="http://www.eclipse.org/swt/">SWT</a>, <a href="www.3dconnexion.com/SpaceNavigator">3D Mice</a>, <a href="https://developers.google.com/public-data/">Google DSPL</a>, and <a href="http://www.nauticalcharts.noaa.gov/mcd/enc/">NOAA ENC</a> charts. If you are using <a href="/glimpse/maven.html">Maven</a> you can depend on the various Glimpse extensions individually.
-    </p>
+    <p><a href="http://glimpse.metsci.com/release/glimpse_core_v1.3.0.zip">Glimpse Core 1.3.0</a></p>
 
-    <h2>Binary</h2>
+    <p><i>Core</i> contains the basics. Everything you need to augment your Swing applications with amazing data visualizations. For most users, this is all you need.</p>
 
-    <p>
-      Download the latest release: <a href="https://github.com/downloads/metsci/glimpse/glimpse_core_v1.2.0.zip">glimpse_core_1.2.0.zip</a> or <a href="https://github.com/downloads/metsci/glimpse/glimpse_full_v1.2.0.zip">glimpse_full_1.2.0.zip</a>.
-    </p>
-
-    <p>
-      Download older releases:  <a href="https://github.com/metsci/glimpse/downloads">https://github.com/metsci/glimpse/downloads</a>.
-    </p>
-
-    <p>
-      Depend on Glimpse using <a href="/glimpse/maven.html">Maven</a>.
-    </p>
+    <p><a href="http://glimpse.metsci.com/release/glimpse_full_v1.3.0.zip">Glimpse Full 1.3.0</a></p>
     
+    <p>
+<i>Full</i> contains extensions for integrating Glimpse with <a href="http://www.eclipse.org/swt/">SWT</a>, <a href="www.3dconnexion.com/SpaceNavigator">3D Mice</a>, <a href="https://developers.google.com/public-data/">Google DSPL</a>, and <a href="http://www.nauticalcharts.noaa.gov/mcd/enc/">NOAA ENC</a> charts. If you are using <a href="/glimpse/maven.html">Maven</a> you can depend on the various Glimpse extensions individually.
+    </p>
+
     <h2>Source</h2>
 
     <p>
-      Download the latest source in either 
+      Download the latest development snapshot in either 
       <a href="https://github.com/metsci/glimpse/zipball/master">zip</a> or
       <a href="https://github.com/metsci/glimpse/tarball/master">tar</a> formats.
     </p>
-    <p>Get the source code by forking us on GitHub: <a href="https://github.com/metsci/glimpse">metsci/glimpse</a>.
+    <p>Get the source code by forking us on GitHub: <a href="https://github.com/metsci/glimpse">metsci/glimpse</a>
+
+    <h2>Maven</h2>
+
+    <p>
+      Depend on Glimpse using <a href="/glimpse/maven.html">Maven</a>
+    </p>
+
+    <h2>Old Versions</h2>
+
+    <p>
+      Old versions are hosted in the <a href="https://github.com/metsci/glimpse/downloads">downloads</a> section of the Glimpse GitHub page.
+    </p>
