more tweaks to download page

--- a/download.html
+++ b/download.html
@@ -21,16 +21,16 @@ title: Downloads
       <a href="https://github.com/metsci/glimpse/zipball/master">zip</a> or
       <a href="https://github.com/metsci/glimpse/tarball/master">tar</a> formats.
     </p>
-    <p>Get the source code by forking us on GitHub: <a href="https://github.com/metsci/glimpse">metsci/glimpse</a>
+    <p>Get the source code by forking us on GitHub: <a href="https://github.com/metsci/glimpse">metsci/glimpse</a>.
 
     <h2>Maven</h2>
 
     <p>
-      Depend on Glimpse using <a href="/glimpse/maven.html">Maven</a>
+      Depend on Glimpse using <a href="/glimpse/maven.html">Maven</a>.
     </p>
 
     <h2>Old Versions</h2>
 
     <p>
-      Old versions are hosted in the <a href="https://github.com/metsci/glimpse/downloads">downloads</a> section of the Glimpse GitHub page.
+      Old versions are hosted in the <a href="https://github.com/metsci/glimpse/downloads">downloads</a> section of the <a href="https://github.com/metsci/glimpse">Glimpse project GitHub</a>.
     </p>
