Fixed typo in screenshots.

--- a/screenshots.html
+++ b/screenshots.html
@@ -115,7 +115,7 @@ title: Screenshots
     <img src="/glimpse/images/10_11_2012/BathymetryExample.png" border="1" width="600px"/>
     <br>
 
-    <h3>Worldwind Integration (<a href="https://github.com/metsci/glimpse/blob/master/extras-examples/src/main/java/com/metsci/glimpse/examples/worldwind/BaythmetryTileExample.java">BaythmetryTileExample.java</a>)</h3>
+    <h3>Worldwind Integration (<a href="https://github.com/metsci/glimpse/blob/master/extras-examples/src/main/java/com/metsci/glimpse/examples/worldwind/BathymetryTileExample.java">BathymetryTileExample.java</a>)</h3>
     <img src="/glimpse/images/10_11_2012/WorldwindBathymetry.png" border="1" width="600px"/>
     <br>
 
