updated videos page to include new dnc video.

--- a/videos.html
+++ b/videos.html
@@ -4,5 +4,17 @@ title: Videos
 ---
 <h3>Videos</h3>
 
+<h3>Digital Nautical Charts</h3>
+
+<video width="800" height="450" frameborder="0" controls>
+    <source src="http://glimpse.metsci.com/video/aisdnc.webm" type="video/webm"/>
+    <source src="http://glimpse.metsci.com/video/aisdnc.mp4" type="video/mp4"/>
+    <source src="http://glimpse.metsci.com/video/aisdnc.avi" type="video/avi"/>
+    <source src="http://glimpse.metsci.com/video/aisdnc.wmv" type="video/wmv"/>
+    Your browser does not support the htlm5 video tag.
+</video>
+
+<h3>Glimpse Introduction</h3>
+
 <iframe src="http://player.vimeo.com/video/37437090" width="800" height="450" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-<div class="videodetail">(<a href="https://vimeo.com/37437090">Vimeo HD</a> <a href="http://youtu.be/jBTZx21Lhmg">You Tube</a> <a href="http://glimpse.metsci.com/video/Glimpse_v4.mp4">MP4 Download</a> <a href="/glimpse/videos.html">More Video</a>)</div>
+<div class="videodetail"><a href="https://vimeo.com/37437090">Vimeo HD</a> - <a href="http://youtu.be/jBTZx21Lhmg">You Tube</a> - <a href="http://glimpse.metsci.com/video/Glimpse_v4.mp4">MP4 Download</a></div>
