--- a/maven.html
+++ b/maven.html
@@ -9,21 +9,20 @@ title: Maven
     &lt;dependency&gt;
         &lt;groupId&gt;com.metsci.glimpse&lt;/groupId&gt;
         &lt;artifactId&gt;glimpse-core&lt;/artifactId&gt;
-        &lt;version&gt;2.1.0&lt;/version&gt;
+        &lt;version&gt;2.1.1&lt;/version&gt;
     &lt;/dependency&gt;
 &lt;/dependencies&gt;</pre>
 
-<p>The <i>full</i> Glimpse release contains a number of modules which add additional features (and usually additional third-party dependencies) to Glimpse. Each has its own Maven artifact:<p>
+<p>The <i>full</i> Glimpse release contains a number of modules which add additional features (and usually additional third-party dependencies) to Glimpse. Each has its own Maven artifact:</p>
 <pre>        &lt;artifactId&gt;glimpse-extras-charts&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-dspl&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-spacenav&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-swt&lt;/artifactId&gt;</pre>
 <pre>        &lt;artifactId&gt;glimpse-extras-examples&lt;/artifactId&gt;</pre>
 
-<p>To browse all available Glimpse Maven artifacts directly: <a href="http://glimpse.metsci.com/maven2/metsci-releases/com/metsci/glimpse/">Releases</a>, <a href="http://glimpse.metsci.com/maven2/metsci-snapshots/com/metsci/glimpse/">Snapshots</a>.
+<p>All the <i>non-extras</i> modules are available directly from <a href="http://search.maven.org/#browse%7C1117099642">Maven Central</a>. In most cases, this is all you will need. However, some of the <i>extras</i> modules contain dependencies which are still only available through the <a href="http://maven.metsci.com/">Metron Maven Repository</a>. Also, older releases are currently only available through the <a href="http://maven.metsci.com/">Metron Maven Repository</a>.
 
-<p>Glimpse is not yet in <a href="http://search.maven.org">Maven Central</a> so you must add <a href="http://glimpse.metsci.com/maven2/">Metron's Maven repository</a> to your project's <strong>pom.xml</strong> or your <strong>settings.xml</strong> in order to download Glimpse artifacts:</p>
-
+<p>In order to download <i>extras</i> artifacts or older versions, you must add <a href="http://glimpse.metsci.com/maven2/">Metron's Maven repository</a> to your project's <strong>pom.xml</strong> or your <strong>settings.xml</strong>:</p>
 
   <pre>&lt;repositories&gt;
     &lt;repository&gt;
@@ -40,4 +39,4 @@ title: Maven
     &lt;/repository&gt;
 &lt;/repositories&gt;</pre>
 
-<p>For more information, see the Maven documentation on <a href="http://maven.apache.org/guides/mini/guide-multiple-repositories.html">Setting up Multiple Repositories</a>.
+<p>For more information, see the Maven documentation on <a href="http://maven.apache.org/guides/mini/guide-multiple-repositories.html">Setting up Multiple Repositories</a>.</p>
